2020-10-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve explanations about importing many-to-many relations, resolves #70

2020-10-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Import nested structures, resolves #68

2020-10-09 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow garbage collection of log entries (thanks to Mathias Brodala)

2020-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use Query Builder consistently in UidRepository

2020-10-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve handling of additional fields, resolves #69

2020-09-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Move general configuration to own "space" in the TCA, resolves #140

2020-09-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Enforce strict Scheduler dependency, resolves #129

2020-09-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.3.3

2020-09-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Exclude resources from packaging (thanks to Mathias Brodala)
	* Use immutable date in log entries (thanks Christoph Lehmann)
	* Prevent SQL errors when no slugs need to be updated (thanks Christoph Lehmann)

2020-08-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.3.2

2020-06-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix failing validation in case of multiple custom steps, resolves #128

2020-05-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 v10, resolves #108
	* Allow SQL functions in valueField and referenceField properties, resolves #114
	* Use TYPO3 random functions for generating temporary keys, resolves #123
	* Rotate icon while synchronization is running, resolves #124
	* Release version 4.3.0 and 4.3.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix display of connector property error, resolves #122
	* Use new API to report about connector configuration errors, resolves #75