@@ -1,3 +1,7 @@
+2020-10-12 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Actually delete records when "insert" and "update" operations are disabled, resolves #88
+
 2020-10-11 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Improve explanations about importing many-to-many relations, resolves #70
